--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Python dependencies
 # Add your project dependencies here
 # Example:
-# numpy>=1.24.0
-# pandas>=2.0.0
+numpy>=1.24.0
+pandas>=2.0.0
 
 pyserini>=1.3.0
